[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PySpot"
version = "0.1.0"
description = "PySpot - A Python SDK"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Ryan Troye", email = "hello@pyspot.io"}]
keywords = ["example", "template"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []
requires-python = ">=3.7"

[project.urls]
homepage = "https://github.com/spotkit-dev/pyspot.io"
documentation = "https://github.com/spotkit-dev/pyspot.io/docs"
source = "https://github.com/spotkit-dev/pyspot.io"
tracker = "https://github.com/spotkit-dev/pyspot.ioissues"

[tool.hatch.metadata]
dynamic = ["version"]

[tool.hatch.version]
path = "src/pyspot/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["src/**"]